--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,14 +11,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0",
-    "tailwindcss": "3.3.2",
+    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
-    "autoprefixer": "10.4.14"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-redux": "^8.0.5",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "3.3.2",
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
